# is_it_even_halal

./: .gitignore  MANIFEST.in  README.md  index.html  main.py  pyproject.toml  requirements.txt  webapp.py
flaskr/: cli-app.py  cli_app.py  haram_info.py  haram_ingredients.json  ingredient_map.json  messages.json  result.json  web-app.py  web_app.py
flaskr/static/: style.css
flaskr/static/css/: index_style.css  result_style.css
flaskr/templates/: base.html  index.html  result.html  submit.html
tests/: test_cli_app.py  test_web_app.py
